--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "To creat an app to store the details of blood doners and to search the details by using keyword \"place\" and\"blood group\"",
   "main": "bloodgroup.js",
   "scripts": {
-    "test": "npm start"
+    "test": "node server.js"
   },
   "keywords": [
     "fsread",
