--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "To creat an app to store the details of blood doners and to search the details by using keyword \"place\" and\"blood group\"",
   "main": "bloodgroup.js",
   "scripts": {
-    "test": "node server.js"
+    "test": "echo \"Error:no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [
     "fsread",
